--- a/client/src/components/skills/SkillCards.css
+++ b/client/src/components/skills/SkillCards.css
@@ -4,14 +4,15 @@
     justify-content: space-evenly;
     align-items: center;
     width: 6vw;
-    height: 10vh;
+    height: 14vh;
     background-color: black;
     border: 6px ridge rgb(185, 70, 57);
     box-shadow: 1px 1px grey, 4px 4px black;
+    margin: 5px auto;
 }
 
 .SkillCards-img {
-    width: 100%;
+    width: 90%;
     background-color: white;
 }
 
