--- a/client/src/components/projects/ProjectCards.css
+++ b/client/src/components/projects/ProjectCards.css
@@ -39,9 +39,18 @@
 
 .ProjectCards-skills {
     display: flex;
-    justify-content: left;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
     height: 90%;
     background-color: grey;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.ProjectCards-each-skill {
+    display: flex;
+    justify-content: left;
+    width: 30vw;
+    height: 30px;
 }
