--- a/client/src/components/skills/SkillList.css
+++ b/client/src/components/skills/SkillList.css
@@ -9,14 +9,12 @@
 .SkillList-window {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     width: 35vw;
     height: 40vh;
     border: 10px ridge rgb(185, 70, 57);
     border-top: 5px ridge rgb(185, 70, 57);
     box-shadow: 1px 1px grey, 6px 6px black;
-    background-color: grey;
+    
 }
 
 .SkillList-window-header {
@@ -29,4 +27,11 @@
     border-right: 6px solid black;
     border-bottom: 6px solid black;
     border-style: double;
+}
+
+.SkillList-window-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: grey;
+    overflow-y: scroll;
 }
