--- a/client/src/shared/shared.css
+++ b/client/src/shared/shared.css
@@ -2,6 +2,52 @@
     display: flex;
 }
 
+.contact-modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.contact-popup {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40vw;
+    height: 50vh; 
+}
+
+.contact-display {
+    display: flex;
+    flex-direction: row;
+    width: 40vw;
+    height: 50vh; 
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+    height: 50vh; 
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 20vw;
+    height: 50vh; 
+}
+
 .login-modal {
     display: none; 
     position: fixed; 
@@ -20,7 +66,8 @@
     margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; 
+    width: 25vw;
+    height: 30vh; 
 }
 
 .close {
