Cabe - UserOptions CSS update

--- a/client/src/components/admin/UpdateAdmin.css
+++ b/client/src/components/admin/UpdateAdmin.css
@@ -1,8 +1,26 @@
 .UpdateAdmin-layout {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30vw;
+    height: 30vw;
+}
+
+.UpdateAdmin-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 25vw;
+    height: 25vh;
+    border: 6px ridge rgb(185, 70, 57);
+    box-shadow: 1px 1px grey, 4px 4px black;
+    background-color: grey;
 }
 
 .UpdateAdmin-form {
     display: flex;
     flex-direction: column;
+    width: 20vw;
+    height: 15vh;
 }
