Cabe - EditSkill update

--- a/client/src/components/skills/AddSkill.css
+++ b/client/src/components/skills/AddSkill.css
@@ -21,7 +21,9 @@
 .AddSkill-card {
     display: flex;
 }
-
+.AddSkill-img {
+    width: 25px;
+}
 .AddSkill-form {
     display: flex;
     flex-direction: column;
